add card-container for view

--- a/src/app/hello/hello/hello.component.html
+++ b/src/app/hello/hello/hello.component.html
@@ -1,3 +1,7 @@
-<p>
-  {{congratulation}}!
-</p>
+<div class="card">
+  <div class="container">
+    <p>
+      {{congratulation}}!
+    </p>
+  </div>
+</div>
