change of concept

--- a/src/app/hello/hello/hello.component.html
+++ b/src/app/hello/hello/hello.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="container">
-    <p>
-      {{congratulation}}!
+    <p *ngFor="let congratulation of congratulations; index as i;">
+      Номер:{{i+1}}, Значение: '{{congratulation}}'!
     </p>
   </div>
 </div>
